// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ColorInput > Render > renders correctly 1`] = `
<div
  class="flex items-center gap-2 w-full h-8 bg-black/10 dark:bg-white/10 rounded-lg px-2"
  data-testid="ColorInput"
>
  <input
    aria-label="Color value"
    class="w-full bg-transparent text-sm outline-none"
    value="oklch(54% 0.194 250)"
  />
</div>
`;

exports[`ColorInput > Render > renders endContent next to the input 1`] = `
<div
  class="flex items-center gap-2 w-full h-8 bg-black/10 dark:bg-white/10 rounded-lg px-2"
  data-testid="ColorInput"
>
  <input
    aria-label="Color value"
    class="w-full bg-transparent text-sm outline-none"
    value="oklch(54% 0.194 250)"
  />
  <span
    data-testid="gamut-icon"
  >
    !
  </span>
</div>
`;

exports[`ColorInput > Render > renders startContent next to the input 1`] = `
<div
  class="flex items-center gap-2 w-full h-8 bg-black/10 dark:bg-white/10 rounded-lg px-2"
  data-testid="ColorInput"
>
  <span
    data-testid="color-swatch"
  >
    C
  </span>
  <input
    aria-label="Color value"
    class="w-full bg-transparent text-sm outline-none"
    value="oklch(54% 0.194 250)"
  />
</div>
`;
